# nexio_stock

./: .env.example  .gitignore  LOADTEST_PLAN.md  RAILWAY.md  README.md  alembic.ini  docker-compose.yml  pyproject.toml  report_load.md
.understand-anything/: .understandignore  fingerprints.json  frontend-knowledge-graph.json  knowledge-graph.json  meta.json
.understand-anything/.trash-1783384638/: assembled-graph.json  batch-1.json  batch-2.json  batch-3.json  batch-4.json  batch-5.json  batch-6.json  batch-7.json  batches.json  fingerprint-input.json  import-map.json  layers.json  review.json  tour.json
.understand-anything/.trash-1783387241/: assemble-review.json  batch-1.json  batch-2.json  batch-3-part-1.json  batch-3-part-2.json  batch-4-part-1.json  batch-4-part-2.json  batch-5.json  batch-6.json  batch-7.json  batches.json  fingerprint-input.json  layers.json  review.json  source-paths.json  tour.json
.understand-anything/.trash-1783405986/: assemble-review.json  assembled-graph.json  batch-1.json  batch-2.json  batch-3.json  batch-4-part-1.json  batch-4-part-2.json  batch-5.json  batch-6.json  batch-7.json  batch-8.json  batch-9.json  batches.json  fingerprint-input.json  layers.json  review.json  tour.json
.understand-anything/.trash-1783416636/: fingerprint-input.json  review-merged.json
.understand-anything/.trash-1783531665/: assemble-review.json  assembled-graph.json  batch-1.json  batch-100.json  batch-2-part-1.json  batch-2-part-2.json  batch-3-part-1.json  batch-3-part-2.json  batch-4-part-1.json  batch-4-part-2.json  batch-6.json  batch-8.json  batch-9.json  batches.json  final-nodes-edges.json  fingerprint-input.json  layers-combined.json  layers.json  review.json  tour-combined.json  tour.json
alembic/: env.py
alembic/versions/: 0243c7acf544_foundation_shops_users_log_tables.py  (+26 more)
app/: __init__.py  cli.py  config.py  db.py  logging_config.py  main.py
app/api/: __init__.py  (+19 more)
frontend/: .env.example  .gitignore  eslint.config.js  index.html  package-lock.json  package.json  playwright.config.ts  tailwind.config.ts  tsconfig.app.json  tsconfig.e2e.json  tsconfig.json  tsconfig.node.json  vite.config.ts
harness/: 00-intake.md  01-branch-map.md  02-ledger.md  03-prd.md  04-absences.md  prd_frontend.md
loadtest/: locustfile.py  provision.py
tests/: conftest.py  test_auth.py  test_auth_shop_staff.py  test_authorization.py  test_catalog_stock.py  test_checkout.py  test_checkout_pending.py  test_cors.py  test_eod.py  test_health.py  test_inventory.py  test_invoices_list.py  test_log_files.py  test_log_tables.py  test_lots.py  test_low_stock.py  test_offline_sessions.py  test_product_creation.py  test_product_lifecycle.py  test_products.py  test_products_pending.py  test_products_quickadd.py  test_settings.py  test_shops.py  test_snapshot_lines.py  test_staff.py  test_stock_overview.py  test_superadmin_shop_maintenance.py  test_unit_of_work.py  test_users.py  test_vendors.py  test_voids.py
tmp/: architecture-review-full-20260708-094512.html  architecture-review-issue21-20260708-084319.html
(+350 files in other folders)
