[project]
name = "barstock"
version = "0.1.0"
description = "Barstock — single-counter liquor shop inventory & billing system"
requires-python = ">=3.11,<3.12"
readme = "README.md"
license = { text = "Proprietary" }
authors = [{ name = "Barstock" }]

dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "sqlalchemy[asyncio]>=2.0.30",
    "asyncpg>=0.29.0",
    "alembic>=1.13.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.4.0",
    "email-validator>=2.2.0",
    "python-jose[cryptography]>=3.3.0",
    "bcrypt>=4.1.0",
    "python-multipart>=0.0.9",
    "structlog>=24.1.0",
    "httpx>=0.27.0",
    "tenacity>=8.5.0",
    "reportlab>=4.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.5.0",
]

[project.scripts]
barstock = "app.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "SIM", "RUF", "ASYNC", "S", "C4"]
ignore = [
    "E501",  # line length handled by formatter
    "B008",  # FastAPI uses function calls in defaults (Query, Depends, Body)
    "S101",  # pytest uses `assert`
    "S104",  # 0.0.0.0 binding in dev container
    "BLE001",  # broad except in cleanup paths is intentional
    "S110",  # cleanup try/except/pass is intentional (see get_db finally)
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "S105",   # hardcoded test passwords are fine
    "S106",
    "S107",   # default password arg in test fixture
    "S311",   # non-crypto RNG is fine in tests
    "N806",   # uppercase `Session` matches the SQLAlchemy sessionmaker class
    "E741",   # `l` / `I` variable names are fine in tests
    "B008",   # FastAPI's `Depends()` in default values
    "S608",   # f-string SQL with uuid-generated identifiers, no untrusted input
]
"app/cli.py" = [
    "N806",   # `Session` is a sessionmaker class
]
"app/db.py" = [
    "N802",   # `get_sessionmaker` matches FastAPI's name convention
]
"app/models/user.py" = [
    "UP042",  # `class UserRole(str, enum.Enum)` is the canonical FastAPI pattern
]
"app/models/invoice.py" = [
    "UP042",  # `class InvoiceStatus(str, enum.Enum)` and `PaymentMode` are
    # the canonical FastAPI pattern (StrEnum is 3.11+ and ruff's UP042
    # fires inconsistently when other Enums in the same file use the
    # str-inheriting form).
]
"app/schemas/auth.py" = [
    "S105",   # "bearer" is the OAuth token type literal, not a password
]
"alembic/**/*.py" = ["E", "F", "I"]  # autogenerated, leave alone

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = ["-ra", "--strict-markers", "--strict-config"]
filterwarnings = [
    "error",
    "ignore::DeprecationWarning:jose.*",
]

[tool.coverage.run]
source = ["app"]
omit = ["app/cli.py"]
